--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   intl: ^0.19.0
   sticky_headers: ^0.3.0+2
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
